[package]
name = "hiearth"
version = "0.1.0"
authors = ["gnaw conwood"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib.git" }
specs = "0.16.1"
specs-derive = "0.4.1"
