[package]
name = "and_we_had_a_wild_thyme"
version = "0.1.0"
authors = ["gnaw conwood"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib.git", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.39"
